--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Git Remote</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, eius consequatur. Illo porro modi quam! Obcaecati ratione facere totam nam inventore harum illum explicabo sint accusamus, voluptates modi nihil delectus?</p>
 </body>
 </html>
